k8s_old/apps/cloudnativepg/operator/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/name: cloudnative-pg
  name: cnpg-system
